--- a/navkatsu-lab/css/style.css
+++ b/navkatsu-lab/css/style.css
@@ -15,7 +15,7 @@ h1, h2, h3, .top-title {
     align-items: center;
     height: 100px;
     width: 100%;
-    background-color: #a37d7d9a;
+    background-color: #3333339a;
 }
 
 #site-logo {
@@ -42,6 +42,7 @@ h1, h2, h3, .top-title {
     color: #fff;
 }
 
+/* SlideShow */
 .swiper-container {
     position: relative;
     width: 100%;
@@ -70,5 +71,131 @@ h1, h2, h3, .top-title {
     width: 100%;
     max-height: 100vh;
     object-fit: fill;
+}
+
+
+.top-title {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 6rem;
+    z-index: 1;
+}
+
+.description-text {
+    text-align: center;
+    font-size: 1.4rem;
+    line-height: 3rem;
+}
+
+.rule {
+    width: 80%;
+    border: 1px solid rgb(110, 110, 110);
+    margin: 3rem auto 1rem;
+}
+
+.sub-title {
+    font-size: 2.4rem;
+    text-align: center;
+    margin: 10rem 0 4rem;
+}
+
+.profile {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#profile-img {
+    width: 375px;
+    height: 375px;
+    padding: 0 4rem;
+}
+
+#profile-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 0 100%;
+    border-radius: 50%;
+}
+
+#profile-text {
+    margin: 0 1rem;
+    line-height: 2.4rem;
+}
+
+
+.works {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.work {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: column wrap;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+.work-img {
+  width: 100%;
+  height: auto;
+  border-radius: 20%;
+}
+
+.work-title {
+    font-size: 2rem;
+    margin: 2rem 0;
+}
+
+
+.work-title {
+    margin: 2rem;
+    text-align: center;
+}
+
+.work p {
+    text-align: center;
+}
+
+#book-img img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.access {
+    display: flex;
+    justify-content: space-between;
+}
+
+#site-footer {
+    margin-top: 6rem;
+    background-color: #333333;
+    width: 100%;
+    height: 60px;
+
+}
+
+.promotion {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#copyright {
+    color: #ffff;
+    text-align: center;
+    padding-top: 20px;
 }
 
