--- a/navkatsu-lab/css/style.css
+++ b/navkatsu-lab/css/style.css
@@ -136,7 +136,7 @@ h1, h2, h3, .top-title {
     width: 80%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 .work {
     display: flex;
@@ -150,6 +150,7 @@ h1, h2, h3, .top-title {
   width: 100%;
   height: auto;
   border-radius: 20%;
+  margin:2rem 0;
 }
 
 .work-title {
@@ -164,7 +165,7 @@ h1, h2, h3, .top-title {
 }
 
 .work p {
-    text-align: center;
+    text-align: left;
 }
 
 #book-img img {
@@ -188,7 +189,7 @@ h1, h2, h3, .top-title {
 
 .promotion {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
 }
