--- a/navkatsu-lab/css/style.css
+++ b/navkatsu-lab/css/style.css
@@ -127,6 +127,8 @@ h1, h2, h3, .top-title {
 }
 
 #profile-text {
+    width: 46rem;
+    height: 27rem;
     margin: 0 1rem;
     line-height: 2.4rem;
 }
@@ -136,20 +138,26 @@ h1, h2, h3, .top-title {
     width: 80%;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    align-items: baseline;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
+
 .work {
+    margin: 0 auto;
+    width: 30%;
+    min-width: 260px;
     display: flex;
     justify-content: space-between;
-    flex-flow: column wrap;
-    margin: 0 auto;
+    flex-flow: column;
+    align-items: center;
     padding: 0 1rem;
 }
 
+
 .work-img {
   width: 100%;
-  height: auto;
-  border-radius: 20%;
+  border-radius: 5%;
   margin:2rem 0;
 }
 
@@ -172,11 +180,16 @@ h1, h2, h3, .top-title {
     width: 100%;
     height: 400px;
     object-fit: cover;
+    margin-top: 6rem;
 }
 
+#place-name {
+    font-size: 32px;
+}
 .access {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 #site-footer {
@@ -192,6 +205,12 @@ h1, h2, h3, .top-title {
     height: auto;
     display: flex;
     justify-content: center;
+}
+
+#pr-youtube{
+     width: 90%;
+     height: 551px;
+     width: 980px;
 }
 
 #copyright {
